--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vite + React</title>
+    <title>Gym-App</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Rubik&family=Rubik+Burned&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
